# NJORDX

./: .gitignore  CMakeLists.txt  README.md  makefile
.devcontainer/: devcontainer.json
include/: ITrader.hpp  company.hpp  company.tpp  config.hpp  njordx.hpp  order.hpp  person.hpp  person.tpp  stock.hpp  stockOrderBook.hpp  stockOrderBook.tpp  trader.hpp  trader.tpp
src/: main.cpp  njordx.cpp  order.cpp  stock.cpp  stockOrderBook.cpp  trader.cpp
test/unit_tests/: test_company.cpp  test_njordx.cpp  test_order.cpp  test_person.cpp  test_stock.cpp  test_stockOrderBook.cpp
